<resources>
    <string name="client_id">or0WN8OXqpsBfLSQOShf14TeojEa</string>
    <string name="client_secret">WALHOjfXmMNjbjhZdIbQ5zTjDN0a</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="server_protocol_https">https://</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="string_content">Image</string>
    <string name="kiosk_enrolling">Kiosk is being enrolled.</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="app_name">WSO2 Device Management Agent</string>
    <string name="empty_app_title"></string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello IoT Server</string>
    <string name="title_activity_display_device_info">DisplayDeviceInfo</string>
    <string name="url">http://192.168.6.6:8080/mdm/register</string>
    <string name="title_activity_register_successful">RegisterSuccessful</string>
    <string name="title_activity_entry">Entry</string>
    <string name="title_head_authentication_error">Authentication Failed</string>
    <string name="title_head_registration_error">Registration Failed</string>
    <string name="title_head_connection_error">Connection Failed</string>
    <string name="title_head_ownership_error">Unauthorized Action</string>
    <string name="title_head_notification_error">Notification failed</string>
    <string name="device_admin_enabled">Device Admin Enabled</string>
    <string name="device_admin_disabled">Device Admin Disabled</string>
    <string name="device_not_compatible_error">You are not allowed to enroll because your device is rooted and device OS version is older than 4.0.3</string>
    <string name="device_not_compatible_error_os">You are not allowed to enroll because your device OS version is older than 4.0.3</string>
    <string name="device_not_compatible_error_root">You are not allowed to enroll because your device is rooted</string>
    <string name="device_not_compatible_with_android_for_work">Device is incompatible with Android For Work</string>
    <string name="device_compatible_with_android_for_work">Device is compatible with Android For Work</string>
    <string name="device_compatible">Compatible device</string>
    <string name="title_activity_authentication_error">AuthenticationError</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_notify">NotifyActivity</string>
    <string name="title_activity_agent_settings">AgentSettingsActivity</string>
    <string name="title_activity_available_operations">AvailableOperationsActivity</string>
    <string name="menu_item_operations">Operations</string>
    <string name="menu_item_pin">Change PIN</string>
    <string name="menu_item_ip">Change Server Address</string>
    <string name="menu_item_location_event">Enable/Disable Event Listening</string>
    <string name="menu_item_log">Debug Log</string>
    <string name="title_activity_alert">Message from IoT Server</string>
    <string name="device_admin_enable_alert">This will enable device administration</string>
    <string name="device_enroll_type_byod">BYOD</string>
    <string name="device_enroll_type_cope">COPE</string>
    <string name="title_init_msg_error">Initialization Failed. Please try again.</string>
    <string name="title_head_init_error">Initialization Failed</string>
    <string name="title_head_confirm_pin">Retype the PIN to Confirm</string>
    <string name="app_url">url</string>
    <string name="app_type">type</string>
    <string name="app_schedule">schedule</string>
    <string name="app_identifier">appIdentifier</string>
    <string name="alarm_scheduled_operation">scheduledOperation</string>
    <string name="alarm_scheduled_operation_payload">scheduledOperationPayload</string>
    <string name="app_uri">packageUri</string>
    <string name="alarm_schedule">schedule</string>
    <string name="alert_message">Message</string>
    <string name="kiosk_application_package_split_regex">_</string>
    <string name="whitelist_package_split_regex">,</string>
    <string name="hint_new_pin">New PIN Code</string>
    <string name="toast_message_pin_change_success">PIN Code changed successfully</string>
    <string name="toast_message_pin_change_failed">Old pin code you entered is wrong, please try again</string>
    <string name="toast_message_enter_server_address">Please enter Server Address, i.e : www.abc.com</string>
    <string name="toast_error_username">Please enter username</string>
    <string name="toast_error_password">Please enter password</string>
    <string name="toast_message_wipe">Device is being wiped</string>
    <string name="toast_message_reboot">Device is being rebooted</string>
    <string name="toast_message_vpn">VPN profile received from the device administrator</string>
    <string name="toast_message_wipe_failed">Device wipe failed due to wrong PIN</string>
    <string name="toast_message_reboot_failed">Device reboot failed due to insufficient privileges</string>
    <string name="toast_message_disenroll">Device disenrolled</string>
    <string name="intent_extra_from_activity">from_activity_name</string>
    <string name="intent_extra_regid">regid</string>
    <string name="intent_extra_main_activity">main_activity_name</string>
    <string name="intent_extra_message_text">messageText</string>
    <string name="intent_extra_message_title">messageTitle</string>
    <string name="intent_extra_token">token</string>
    <string name="intent_extra_data">data</string>
    <string name="intent_extra_code">code</string>
    <string name="intent_extra_operation_id">id</string>
    <string name="intent_extra_payload">payload</string>
    <string name="intent_extra_message_id">msgID</string>
    <string name="intent_extra_status">status</string>
    <string name="intent_extra_status_ok">200</string>
    <string name="intent_extra_status_accepted">202</string>
    <string name="intent_extra_status_fail">400</string>
    <string name="intent_extra_response">response</string>
    <string name="intent_extra_fresh_reg_flag">freshRegFlag</string>
    <string name="intent_extra_username">username</string>
    <string name="intent_extra_ssid">ssid</string>
    <string name="intent_extra_server">serverAddress</string>
    <string name="intent_extra_schedule">schedule</string>
    <string name="pref_key_schedule">firmware_upgrade_schedule</string>
    <string name="intent_extra_server_port">serverPort</string>
    <string name="intent_extra_shared_secret">sharedSecret</string>
    <string name="intent_extra_dns">dnsServer</string>
    <string name="intent_extra_lock_code">lockCode</string>
    <string name="intent_extra_password">password</string>
    <string name="intent_extra_function">function</string>
    <string name="intent_extra_enable">enable</string>
    <string name="intent_extra_disable">disable</string>
    <string name="intent_extra_encrypt">encrypted</string>
    <string name="intent_extra_notification">notification</string>
    <string name="intent_extra_identity">identity</string>
    <string name="intent_extra_title">title</string>
    <string name="intent_extra_type">type</string>
    <string name="intent_extra_package">package</string>
    <string name="intent_extra_policies">policies</string>
    <string name="intent_extra_name">name</string>
    <string name="intent_extra_not_violated">notviolated</string>
    <string name="button_continue">Continue</string>
    <string name="button_exit">Exit</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="button_agree">Agree</string>
    <string name="button_cancel">Cancel</string>
    <string name="txt_organization">Organization</string>
    <string name="txt_username">Username</string>
    <string name="txt_password">Password</string>
    <string name="txt_sign_in">Please sign in to register your device with WSO2 IoT Server.</string>
    <string name="txt_sign_up">Don\'t have an account? Sign up for free with Device cloud and try it out!</string>
    <string name="txt_disclaimer_title">Disclaimer</string>
    <string name="txt_disclaimer">
        This WSO2 Device Management Agent app requires access to certain administrator functions on your device. Here is a list of those administrator functions and why access is required for each of them:
\n\n- Erase All Data: This permission is required to enable you to  remotely use the factory data reset option.
\n\n- Change the Screen Lock: This permission is required to allow you to remotely change your screen lock type.
\n\n- Set password rules: This permission  is required to allow you to remotely set password rules to your device.
\n\n- Monitor screen unlock attempts: This permission is required to allow you to detect unlock attempts on your device with incorrect passwords and to  enable factory resetting of your device if  the number of unlock attempts are exceeded.
\n\n- Lock Screen: This permission is required to allow you to remotely lock the screen of your device.
\n\n- Set screen lock password expiration: This permission is required to allow you to remotely set an expiration time for your screen lock password.
\n\n- Set storage encryption: This permission is required to allow remote encryption of your device storage.
\n\n- Disable cameras: This is required to for you to remotely allow/disallow camera usage on your device.
\n\nYou will be prompted to Activate Device Admin after registering your device with WSO2 Device cloud and by clicking "Activate" you consent to this App having access to the above administrator functions on your device.
\n\nYou can revoke your consent at anytime by opening WSO2 Device Management Agent app and clicking on "Unregister" or by going to Settings \-\>Security \-\> Device Administrators and Deactivating WSO2 Device Management Agent.
\n\nAll remote operations can only be triggered from the Device Management Console in the WSO2 Device Cloud and can only be performed by authorized user.
\n\nAll data sent to the WSO2 Device cloud is only accessible to the authorized user and can be permanently removed if needed.
    </string>
    <string name="wipe_the_device">Wipe the device</string>
    <string name="txt_last_server_sync">Last server sync</string>
    <string name="txt_device_id">Device Information</string>
    <string name="txt_device_id_message">Show device model, OS version IMEI and other information</string>
    <string name="txt_change_pin">Change PIN</string>
    <string name="txt_change_pin_message">Click here to change PIN code</string>
    <string name="txt_registration">Unregister</string>
    <string name="txt_registration_message">Click here to unregister device</string>
    <string name="txt_agent_version">Agent Version</string>
</resources>