<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright (c) 2014, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 ~
 ~ WSO2 Inc. licenses this file to you under the Apache License,
 ~ Version 2.0 (the "License"); you may not use this file except
 ~ in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing,
 ~ software distributed under the License is distributed on an
 ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 ~ KIND, either express or implied.  See the License for the
 ~ specific language governing permissions and limitations
 ~ under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    tools:context=".activities.AuthenticationActivity">

    <include
        android:id="@+id/top_banner"
        layout="@layout/top_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/top_banner"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <TextView
                android:id="@+id/textViewSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/txt_sign_in"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="@android:color/black" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutEditTextDomain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/InputText">

                <EditText
                    android:id="@+id/etDomain"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:cursorVisible="true"
                    android:hint="@string/txt_organization"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutEditTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/InputText">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:cursorVisible="true"
                    android:hint="@string/txt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/InputText"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:hint="@string/txt_password"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSignIn"
                style="@style/ButtonText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_orange"
                android:text="@string/btn_sign_in" />

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/txt_sign_up"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textViewWipeData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/wipe_the_device"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>