<?xml version="1.0" encoding="utf-8"?><!--
 ~ Copyright (c) 2014, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 ~
 ~ WSO2 Inc. licenses this file to you under the Apache License,
 ~ Version 2.0 (the "License"); you may not use this file except
 ~ in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~    http://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing,
 ~ software distributed under the License is distributed on an
 ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 ~ KIND, either express or implied.  See the License for the
 ~ specific language governing permissions and limitations
 ~ under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    tools:context=".activities.AlreadyRegisteredActivity">

    <include
        android:id="@+id/top_banner"
        layout="@layout/top_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top_banner"
        android:fillViewport="true"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layoutSync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewLastSyncTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@+id/imageViewRefresh"
                    android:text="@string/txt_last_server_sync"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/textViewLastSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewLastSyncTitle"
                    android:layout_marginTop="5dp"
                    android:layout_toStartOf="@+id/imageViewRefresh"
                    android:text="@string/app_name" />

                <ImageView
                    android:id="@+id/imageViewRefresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/textViewLastSync"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/app_name"
                    android:tint="@color/black"
                    app:srcCompat="@android:drawable/stat_notify_sync" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewLastSync"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutDeviceInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewDeviceNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/txt_device_id"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/textViewDeviceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewDeviceNameTitle"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_device_id_message" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewDeviceName"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutChangePIN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewChangePINTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/txt_change_pin"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/textViewChangePIN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewChangePINTitle"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_change_pin_message" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewChangePIN"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewRegistrationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/txt_registration"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/textViewRegistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewRegistrationTitle"
                    android:layout_marginTop="5dp"
                    android:text="@string/txt_registration_message" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewRegistration"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textViewVersionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/txt_agent_version"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

                <TextView
                    android:id="@+id/textViewVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewVersionTitle"
                    android:layout_marginTop="5dp"
                    android:text="@string/app_name" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewVersion"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
